@@ -50,12 +50,3 @@ plugin.tx_kesearch_pi3 {
     additionalAllowedPiVars < plugin.tx_kesearch_pi1.additionalAllowedPiVars
     searchWordParameter < plugin.tx_kesearch_pi1.searchWordParameter
 }
-
-module.tx_dashboard {
-    view {
-        templateRootPaths {
-            1613733292 = EXT:ke_search/Resources/Private/Templates/Dashboard/
-            1613733293 = {$plugin.tx_kesearch.templateRootPath}
-        }
-    }
-}
